--- a/hola.html
+++ b/hola.html
@@ -1,1 +1,12 @@
-hola mundo
+ <!DOCTYPE html>
+<HTML>
+  <head>
+    <title>Mi primer WEB</title>
+  </head>
+  <body>
+    <div id="una capa">
+      <h1>Hola mundo!</h1>
+      <p>Este es un ejemplo del uso de HTML para crear un documento web que nuestro navegador es capaz de interpretar.</p>
+    </div>
+  </body>  
+</HTML>
