--- a/Daniel/vistaperfil.html
+++ b/Daniel/vistaperfil.html
@@ -8,10 +8,11 @@
     <title>Vista Perfil</title>
 </head>
 <body>
-    <header>
-        <h1>Nombre de usuario</h1>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a>
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+    <header class="headerPerfil">
+        <h1 class="nombreUsuario">Nombre de usuario</h1>
+        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
+        
     </header>
     <main>
         <section class="formulario">
