Vista Pagar CSS
Creación CSS vista pagar, sin resultados positivos

--- a/vista_03_pagar.html
+++ b/vista_03_pagar.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagar</title>
+    <link rel="stylesheet" href="css/vista_03_pagar.css">
 </head>
 <body>
-    <header>
-        <div>Nombre usuario</div>
-        <a href="index.html">Cerrar sesión</a>
-        <a href="vista_perfil"><img src="Img/Messi.jpg" alt="Avatar"></a>
+    <header class="contenedor_header">
+        <div class="header_item1">Nombre usuario</div>
+        <a class="header_item2" href="index.html">Cerrar sesión</a>
+        <a class="header_item3" href="vista_perfil"><img src="Img/Messi.jpg" alt="Avatar"></a>
         <! -- corregir ambas ref cuando esten las vistas disponibles -->
     </header>
     <main>
