modificacion vista "planes premium"
se modifico la vista "planes premium" para que funcione con grid

--- a/Daniel/planespremium.html
+++ b/Daniel/planespremium.html
@@ -8,34 +8,34 @@
     <title>Planes premium</title>
 </head>
 <body>
-    <header>
-        <h1>Nombre de usuario</h1>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+    <header class="headerPerfil">
+        <h1 class="nombreUsuario">Nombre de usuario</h1>
+        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>  
     </header>
-    <main class="planes">
+    <main>
         <h2>Planes Premium</h2>
-    <section>
+    <section class="sectionPlanes">
         <form class="formulario" action="">
-            <article>
+            <article class="articuloPremium">
                 <h3>Plan mensual</h3>
-                <img src="https://picsum.photos/50/50" alt="">
+                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
                 <input type="radio" name="opcion" value="Plan 1">
             </article>
-            <article>
+            <article class="articuloPremium">
                 <h3>Plan anual</h3>
-                <img src="https://picsum.photos/50/50" alt="">
+                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
                 <input type="radio" name="opcion" value="Plan 1">
             </article>
-            <article>
+            <article class="articuloPremium">
                 <h3>Plan infinito</h3>
-                <img src="https://picsum.photos/50/50" alt="">
+                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
                 <input type="radio" name="opcion" value="Plan 1">
             </article>
         </form>
         <article class="botones">
-            <a href="vistapantallaprincipa.html"><button class="boton 1" type="submit">Cancelar</button></a>
-            <a href="vistapagar.html"><button class="boton 2" type="submit">Avanzar</button></a>
+            <a href="vistapantallaprincipa.html"><button type="submit">Cancelar</button></a>
+            <a href="vistapagar.html"><button type="submit">Avanzar</button></a>
         </article>
     </section>
 </main>
