--- a/Daniel/vistaperfil.html
+++ b/Daniel/vistaperfil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Vista Perfil</title>
 </head>
+
 <body>
     <header class="headerPerfil">
         <h1 class="nombreUsuario">Nombre de usuario</h1>
-        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50"
+                alt="imagen perfil"></a>
         <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
-        
     </header>
     <main>
         <section class="formulario">
@@ -27,11 +29,12 @@
                 </article>
                 <article>
                     <label for="repetircontraseña">Repetir contraseña</label>
-                    <input type="password" name="repetircontraseña" id="repetircontraseña" placeholder="Repetir contraseña">
+                    <input type="password" name="repetircontraseña" id="repetircontraseña"
+                        placeholder="Repetir contraseña">
                 </article>
                 <article class="fechanacimiento">
                     <label for="fechanacimiento">Fecha de nacimiento</label>
-                    <input class="inputfecha" type="date" name="fechanacimiento" id="fechanacimiento" >
+                    <input class="inputfecha" type="date" name="fechanacimiento" id="fechanacimiento">
                 </article>
                 <article>
                     <label for="email">e-mail</label>
@@ -45,7 +48,6 @@
             <a href="vistapantallaprincipa.html"><button>Volver al home</button></a>
             <a href=""><button>Guardar</button></a>
         </section>
-
     </main>
     <footer>
         <section class="integrantes">
@@ -57,4 +59,5 @@
         </section>
     </footer>
 </body>
+
 </html>
