modificacion vista "pagar"
se modifico la vista "pagar" para que quede mas ordenado

--- a/Daniel/vistapagar.html
+++ b/Daniel/vistapagar.html
@@ -22,30 +22,36 @@
             </h2>
             <img class="imgplan" src="https://picsum.photos/50/50" alt="imagen plan">
         </section>
-        <section class="formulario">
-            <form action="">
-                <article class="tarjeta">
+        <form action="">
+            <section class="formulario">
+                <article>
                     <label for="tarjeta">Tarjeta</label>
                     <input class="inputtarjeta" type="text" name="tarjeta" id="tarjeta" placeholder="tarjeta">
                 </article>
-                <article class="cvc">
+                <article>
                     <label for="cvc">CVC</label>
                     <input class="inputcvc" type="text" name="cvc" id="cvc" placeholder="CVC">
                 </article>
-                <article class="vto">
+                <article>
                     <label for="vto">VTO</label>
                     <input class="inputvto" type="date" name="vto" id="vto" placeholder="vencimiento">
                 </article>
-                <article class="nombre">
+                <article>
                     <label for="nombre">Nombre y apellido</label>
                     <input class="inputnombre" type="text" name="nombre" id="nombre" placeholder="Nombre y apellido">
                 </article>
-                <article class="botones">
-                    <a href="vistapantallaprincipa.html"><input class="boton 1" type="button" value="Cancelar"></a>
-                    <a href="vistapantallaprincipa.html"><input class="boton 1" type="button" value="Pagar"></a>
+                <article>
+                    <a href="vistapantallaprincipa.html"><button class="botonesPagar" type="submit"
+                            value="Cancelar">Cancelar</button></a>
                 </article>
-            </form>
-        </section>
+                <article>
+                    <a href="vistapantallaprincipa.html"><button class="botonesPagar" type="submit"
+                            value="Pagar">Pagar</button></a>
+                </article>
+
+
+            </section>
+        </form>
     </main>
     <footer>
         <section class="integrantes">
