--- a/Daniel/planespremium.html
+++ b/Daniel/planespremium.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,46 +8,49 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Planes premium</title>
 </head>
+
 <body>
     <header class="headerPerfil">
         <h1 class="nombreUsuario">Nombre de usuario</h1>
-        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
-        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>  
+        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50"
+                alt="imagen perfil"></a>
+        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
     </header>
     <main>
         <h2>Planes Premium</h2>
-    <section class="sectionPlanes">
-        <form class="formulario" action="">
-            <article class="articuloPremium">
-                <h3>Plan mensual</h3>
-                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
-                <input type="radio" name="opcion" value="Plan 1">
+        <section class="sectionPlanes">
+            <form class="formulario" action="">
+                <article class="articuloPremium">
+                    <h3>Plan mensual</h3>
+                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <input type="radio" name="opcion" value="Plan 1">
+                </article>
+                <article class="articuloPremium">
+                    <h3>Plan anual</h3>
+                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <input type="radio" name="opcion" value="Plan 1">
+                </article>
+                <article class="articuloPremium">
+                    <h3>Plan infinito</h3>
+                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <input type="radio" name="opcion" value="Plan 1">
+                </article>
+            </form>
+            <article class="botones">
+                <a href="vistapantallaprincipa.html"><button type="submit">Cancelar</button></a>
+                <a href="vistapagar.html"><button type="submit">Avanzar</button></a>
             </article>
-            <article class="articuloPremium">
-                <h3>Plan anual</h3>
-                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
-                <input type="radio" name="opcion" value="Plan 1">
-            </article>
-            <article class="articuloPremium">
-                <h3>Plan infinito</h3>
-                <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
-                <input type="radio" name="opcion" value="Plan 1">
-            </article>
-        </form>
-        <article class="botones">
-            <a href="vistapantallaprincipa.html"><button type="submit">Cancelar</button></a>
-            <a href="vistapagar.html"><button type="submit">Avanzar</button></a>
-        </article>
-    </section>
-</main>
-<footer>
-    <section class="integrantes">
-        <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
-    </section>
-</footer>
+        </section>
+    </main>
+    <footer>
+        <section class="integrantes">
+            <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
+            <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
+            <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
+            <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
+            <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
+        </section>
+    </footer>
 </body>
+
 </html>
