--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Inicio de sesión</title>
 </head>
+
 <body>
     <main class="contenedor">
         <form action="">
@@ -18,14 +20,7 @@
         </form>
     </main>
     <a href="vistaperfil.html">Registrarme</a>
-    <footer>
-        <section class="integrantes">
-            <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
-        </section>
-    </footer>
-</body>
+    <!-- Footer -->
+     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
+
 </html>
