--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -59,15 +59,7 @@
         <span class="circle"><i class="fa-solid fa-circle fa-2xl"></i></span>
         <span class="square"><i class="fa-regular fa-square fa-2xl"></i></span>
     </section>
-    <footer>
-        <section class="integrantes">
-            <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
-        </section>
-    </footer>
-    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <!-- Footer -->
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
