--- a/vistapagar.html
+++ b/vistapagar.html
@@ -53,15 +53,8 @@
             </section>
         </form>
     </main>
-    <footer>
-        <section class="integrantes">
-            <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
-            <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
-        </section>
-    </footer>
+    <!-- Footer -->
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
 </body>
 
 </html>
