--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -29,12 +29,11 @@
                 </article>
                 <article>
                     <label for="repetircontraseña">Repetir contraseña</label>
-                    <input type="password" name="repetircontraseña" id="repetircontraseña"
-                        placeholder="Repetir contraseña">
+                    <input type="password" name="repetircontraseña" id="repetircontraseña" placeholder="Repetir contraseña">
                 </article>
                 <article class="fechanacimiento">
                     <label for="fechanacimiento">Fecha de nacimiento</label>
-                    <input class="inputfecha" type="date" name="fechanacimiento" id="fechanacimiento">
+                    <input class="inputfecha" type="date" name="fechanacimiento" id="fechanacimiento" >
                 </article>
                 <article>
                     <label for="email">e-mail</label>
