--- a/planespremium.html
+++ b/planespremium.html
@@ -10,35 +10,34 @@
 </head>
 
 <body>
-    <header class="headerPerfil">
-        <h1 class="nombreUsuario">Nombre de usuario</h1>
-        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50"
-                alt="imagen perfil"></a>
-        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
+    <header>
+        <h1>Nombre de usuario</h1>
+        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
-    <main>
+    <main class="planes">
         <h2>Planes Premium</h2>
-        <section class="sectionPlanes">
+        <section>
             <form class="formulario" action="">
-                <article class="articuloPremium">
+                <article>
                     <h3>Plan mensual</h3>
-                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <img src="https://picsum.photos/50/50" alt="">
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
-                <article class="articuloPremium">
+                <article>
                     <h3>Plan anual</h3>
-                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <img src="https://picsum.photos/50/50" alt="">
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
-                <article class="articuloPremium">
+                <article>
                     <h3>Plan infinito</h3>
-                    <img class="imgPremium" src="https://picsum.photos/50/50" alt="">
+                    <img src="https://picsum.photos/50/50" alt="">
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
             </form>
             <article class="botones">
-                <a href="vistapantallaprincipa.html"><button type="submit">Cancelar</button></a>
-                <a href="vistapagar.html"><button type="submit">Avanzar</button></a>
+                <a href="vistapantallaprincipa.html"><button class="boton 1" type="submit">Cancelar</button></a>
+                <a href="vistapagar.html"><button class="boton 2" type="submit">Avanzar</button></a>
             </article>
         </section>
     </main>
