--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -15,41 +15,40 @@
         <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
-    <nav>
-        <ul>
-            <li><a href="vistapantallaprincipa.html">Home</a></li>
-        </ul>
-        <ul>
-            <li><a href="vistabuscar.html">Buscar</a></li>
-        </ul>
-        <ul>
-            <li><a href="vistamisalbumes.html">Mis albums</a></li>
-        </ul>
-        <ul>
-            <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
-        </ul>
-    </nav>
-    <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="https://picsum.photos/50/50" alt="">
-        <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
-        <article class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate voluptates fugit recusandae eius, 
-            voluptatum aliquid vel exercitationem, odit maxime minus saepe iure. Unde tempora ab earum placeat officiis illum accusantium!
-        </article>
+        <nav>
+            <ul>
+                <li><a href="vistapantallaprincipa.html">Home</a></li>
+            </ul>
+            <ul>
+                <li><a href="vistabuscar.html">Buscar</a></li>
+            </ul>
+            <ul>
+                <li><a href="vistamisalbumes.html">Mis albums</a></li>
+            </ul>
+            <ul>
+                <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
+            </ul>
+        </nav>
+        <section class="sectionimgbajonav">
+            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
+            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+            <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
+            </article>
+        </section>
     </section>
-</section>
     <section class="albumes">
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Flema.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Hermetica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Kataklysm.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/motorhead.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Nightwish.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Pantera.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Sonata artica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
     </section>
     <section class="reproductor">
         <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
