--- a/vistamusicasonando.html
+++ b/vistamusicasonando.html
@@ -30,10 +30,9 @@
         </ul>
     </nav>
     <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="https://picsum.photos/50/50" alt="">
+        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
         <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
-        <article class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate voluptates fugit recusandae eius, 
-            voluptatum aliquid vel exercitationem, odit maxime minus saepe iure. Unde tempora ab earum placeat officiis illum accusantium!
+        <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
         </article>
     </section>
 </section>
