--- a/vistapagar.html
+++ b/vistapagar.html
@@ -10,48 +10,42 @@
 </head>
 
 <body>
-    <header class="headerPerfil">
-        <h1 class="nombreUsuario">Nombre de usuario</h1>
-        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50"
-                alt="imagen perfil"></a>
-        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
+    <header>
+        <h1>Nombre de usuario</h1>
+        <a class="cerrarsesion" href="index.html">Cerrar sesion</a>
+        <a href="vistaperfil.html">
+        <img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil">
+        </a>
     </header>
     <main>
         <section class="infoplan">
-            <h2>Elegiste el plan <...............>
-            </h2>
+            <h2>Elegiste el plan <...............></h2>
             <img class="imgplan" src="https://picsum.photos/50/50" alt="imagen plan">
         </section>
-        <form action="">
-            <section class="formulario">
-                <article>
+        <section class="formulario">
+            <form action="">
+                <article class="tarjeta">
                     <label for="tarjeta">Tarjeta</label>
                     <input class="inputtarjeta" type="text" name="tarjeta" id="tarjeta" placeholder="tarjeta">
                 </article>
-                <article>
+                <article class="cvc">
                     <label for="cvc">CVC</label>
                     <input class="inputcvc" type="text" name="cvc" id="cvc" placeholder="CVC">
                 </article>
-                <article>
+                <article class="vto">
                     <label for="vto">VTO</label>
                     <input class="inputvto" type="date" name="vto" id="vto" placeholder="vencimiento">
                 </article>
-                <article>
+                <article class="nombre">
                     <label for="nombre">Nombre y apellido</label>
                     <input class="inputnombre" type="text" name="nombre" id="nombre" placeholder="Nombre y apellido">
                 </article>
-                <article>
-                    <a href="vistapantallaprincipa.html"><button class="botonesPagar" type="submit"
-                            value="Cancelar">Cancelar</button></a>
+                <article class="botones">
+                    <a href="vistapantallaprincipa.html"><input class="boton 1" type="button" value="Cancelar"></a>
+                    <a href="vistapantallaprincipa.html"><input class="boton 1" type="button" value="Pagar"></a>
                 </article>
-                <article>
-                    <a href="vistapantallaprincipa.html"><button class="botonesPagar" type="submit"
-                            value="Pagar">Pagar</button></a>
-                </article>
-
-
-            </section>
-        </form>
+            </form>
+        </section>
     </main>
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
