--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -30,33 +30,32 @@
         </ul>
     </nav>
     <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="https://picsum.photos/50/50" alt="">
+        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
         <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
-        <article class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate voluptates fugit recusandae eius, 
-            voluptatum aliquid vel exercitationem, odit maxime minus saepe iure. Unde tempora ab earum placeat officiis illum accusantium!
+        <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
         </article>
     </section>
 </section>
-    <section class="albumes">
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="https://picsum.photos/50/50" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    </section>
-    <section class="reproductor">
-        <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
-        <span class="circle"><i class="fa-solid fa-circle fa-2xl"></i></span>
-        <span class="square"><i class="fa-regular fa-square fa-2xl"></i></span>
-    </section>
-    <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<section class="albumes">
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Flema.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Hermetica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Kataklysm.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/motorhead.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Nightwish.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Pantera.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Sonata artica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+</section>
+<section class="reproductor">
+    <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
+    <span class="circle"><i class="fa-solid fa-circle fa-2xl"></i></span>
+    <span class="square"><i class="fa-regular fa-square fa-2xl"></i></span>
+</section>
+<!-- Footer -->
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
