--- a/reusables/footer.html
+++ b/reusables/footer.html
@@ -6,7 +6,7 @@
 </head>
 <footer>
     <section class="integrantes">
-        <article class="integrante">integrantes 1 (Nombre, Apellido, DNI)</article>
+        <article class="integrante">integrante: Ramiro Casanova 40638706</article>
         <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
