--- a/reusables/footer.html
+++ b/reusables/footer.html
@@ -10,6 +10,6 @@
         <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
+        <article class="integrante">integrante: Federico Ralowiec 33347115</article>
     </section>
 </footer>
