--- a/reusables/footer.html
+++ b/reusables/footer.html
@@ -8,7 +8,7 @@
     <section class="integrantes">
         <article class="integrante">integrante: Ramiro Casanova 40638706</article>
         <article class="integrante">integrantes 2 (Nombre, Apellido, DNI)</article>
-        <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
+        <article class="integrante">integrante: Franco Ulzurrun 38998622</article>
         <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrantes 5 (Nombre, Apellido, DNI)</article>
     </section>
