--- a/reusables/footer.html
+++ b/reusables/footer.html
@@ -8,7 +8,7 @@
     <section class="integrantes">
         <article class="integrante">integrante: Ramiro Casanova 40638706</article>
         <article class="integrante">integrantes 2 Vazquez Espindola Mario 42471083</article>
-        <article class="integrante">integrantes 3 (Nombre, Apellido, DNI)</article>
+        <article class="integrante">integrantes 3 Daniel Gomez 33157273</article>
         <article class="integrante">integrantes 4 (Nombre, Apellido, DNI)</article>
         <article class="integrante">integrante: Federico Ralowiec 33347115</article>
     </section>
