--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <main class="contenedor">
         <form action="">
-            <label for="usuario">Usuario</label>
-            <input type="text" name="usuario" id="usuario">
+            <label for="usuario">Usuario</label >
+            <input type="text" name="usuario" id="usuario" placeholder="Usuario">
             <label for="contraseña">Contraseña</label>
-            <input type="password" name="contraseña" id="contraseña">
-            <input class="boton" type="submit" value="Iniciar Sesión">
+            <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
+            <a href="vistapantallaprincipa.html"><input class="boton" type="button" value="Iniciar Sesión"></a>
         </form>
     </main>
-    <a href="vistaperfil.html">Registrarme</a>
+    <a href="vistaregistro.html">Registrarse</a>
     <!-- Footer -->
      <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
 
