--- a/planespremium.html
+++ b/planespremium.html
@@ -21,18 +21,21 @@
             <form class="formulario" action="">
                 <article>
                     <h3>Plan mensual</h3>
-                    <img src="https://picsum.photos/50/50" alt="">
+                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <p>$1000/Mes</p>
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
                 <article>
-                    <h3>Plan anual</h3>
-                    <img src="https://picsum.photos/50/50" alt="">
-                    <input type="radio" name="opcion" value="Plan 1">
+                    <h3>Plan Semestral</h3> 
+                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <p>$900/Mes 10% de descuento</p>
+                    <input type="radio" name="opcion" value="Plan 2">
                 </article>
                 <article>
-                    <h3>Plan infinito</h3>
-                    <img src="https://picsum.photos/50/50" alt="">
-                    <input type="radio" name="opcion" value="Plan 1">
+                    <h3>Plan Anual</h3>
+                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <p>$800/Mes 20% de descuento</p>
+                    <input type="radio" name="opcion" value="Plan 3">
                 </article>
             </form>
             <article class="botones">
