--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Pantalla Principal</title>
 </head>
-<body>
+<body class="wrapped">
     <header>
         <h1>SPOTILAM</h1>
         <h2>Nombre de usuario</h2>
