--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -17,16 +17,16 @@
     <section class="navegador">
         <nav>
             <ul>
-                <li><a href="vistapantallaprincipa.html">Home</a></li>
+                <a href="vistapantallaprincipa.html"><li>Home</li></a>
             </ul>
             <ul>
-                <li><a href="vistabuscar.html">Buscar</a></li>
+                <a href="vistabuscar.html"><li>Buscar</li></a>
             </ul>
             <ul>
-                <li><a href="vistamisalbumes.html">Mis albums</a></li>
+                <a href="vistamisalbumes.html"><li>Mis albums</li></a>
             </ul>
             <ul>
-                <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
+                <a href="vistamiscancionesfavoritass.html"><li>Mis favoritas</li></a>
             </ul>
         </nav>
         <section class="sectionimgbajonav">
