--- a/vistapagar.html
+++ b/vistapagar.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/vistapagar.css">
-    <link rel="stylesheet" href="CSS/footer.css">
+    <!-- <link rel="stylesheet" href="CSS/footer.css"> -->
     <title>Vista pagar</title>
 </head>
 
 <body>
     <header>
-        <h1>Nombre de usuario</h1>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a>
+        <section class="usuario">
+            <h1>Nombre de usuario</h1>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a>
+        </section>
         <a href="vistaperfil.html">
         <img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil">
         </a>
@@ -48,7 +50,17 @@
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
+    <!-- <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe> -->
+    <footer>
+        <section class="integrantes">
+            <article class="integrante">integrante: Ramiro Casanova 40638706</article>
+            <article class="integrante">integrante: Vazquez Espindola Mario 42471083</article>
+            <article class="integrante">integrante: Daniel Gomez 33157273</article>
+            <article class="integrante">integrante: Franco Ulzurrun 38998622</article>
+            <article class="integrante">integrante: Federico Ralowiec 33347115</article>
+            <article class="integrante">integrante: Mariano Saldivar 34767410</article>
+        </section>
+    </footer>
 </body>
 
 </html>
