modificacion vista "Registro"
El profe en el video dijo que los inputs tienen que cubrir toda la ventana cuando es resolucion de celular o tablet, modifique el width de los inputs y ahora se ve asi cuando se reduce la recolucion

--- a/vistaregistro.html
+++ b/vistaregistro.html
@@ -25,13 +25,13 @@
                     <label for="repetircontraseña">Repetir contraseña</label>
                     <input type="password" name="repetircontraseña" id="repetircontraseña" placeholder="Repetir contraseña">
                 </article>
-                <article class="fechanacimiento">
+                <article>
                     <label for="fechanacimiento">Fecha de nacimiento</label>
                     <input class="inputfecha" type="date" name="fechanacimiento" id="fechanacimiento" >
                 </article>
                 <article>
-                    <label for="email">e-mail</label>
-                    <input type="email" name="email" id="email" placeholder="e-mail">
+                    <label for="email">E-mail</label>
+                    <input type="email" name="email" id="email" placeholder="E-mail">
                 </article>
             </form>
             <a class="linkpremium" href="planespremium.html">Premium</a>
