arreglo footer en planes premium y pagar

--- a/planespremium.html
+++ b/planespremium.html
@@ -40,11 +40,13 @@
             </form>
             <article class="botones">
                 <a href="vistapantallaprincipa.html"><button class="boton 1" type="submit">Cancelar</button></a>
-                <a href="vistapagar.html"><button class="boton 2" type="submit">Avanzar</button></a>
+                <a href="vistapagar2.html"><button class="boton 2" type="submit">Avanzar</button></a>
             </article>
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body></body>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
+
+</body>
 
 </html>
