--- a/vistapagar2.html
+++ b/vistapagar2.html
@@ -67,15 +67,6 @@
             <br />
         </section>
     </main>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
-<footer>
-    <section class="integrantes">
-        <article class="integrante">integrante: Ramiro Casanova 40638706</article>
-        <article class="integrante">integrante: Vazquez Espindola Mario 42471083</article>
-        <article class="integrante">integrante: Daniel Gomez 33157273</article>
-        <article class="integrante">integrante: Franco Ulzurrun 38998622</article>
-        <article class="integrante">integrante: Federico Ralowiec 33347115</article>
-        <article class="integrante">integrante: Mariano Saldivar 34767410</article>
-    </section>
-</footer>
 </html>
