header a medio terminar

--- a/planespremium.html
+++ b/planespremium.html
@@ -40,7 +40,7 @@
             </form>
             <article class="botones">
                 <a href="vistapantallaprincipa.html"><button class="boton 1" type="submit">Cancelar</button></a>
-                <a href="vistapagar2.html"><button class="boton 2" type="submit">Avanzar</button></a>
+                <a href="vistapagar.html"><button class="boton 2" type="submit">Avanzar</button></a>
             </article>
         </section>
     </main>
