--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -13,9 +13,11 @@
             <input class="buscadorinput" type="text" name="q" placeholder="Buscar..." />
             <input  type="button" value="Buscar" />
         </form>
-        <h2>Nombre de usuario</h2>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
     <nav>
