--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Mis Albumes favoritos</h1>
-        <h2>Nombre de usuario</h2>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <h1>Mis Albumes Favoritos</h1>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
         <nav>
