--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -10,9 +10,11 @@
 <body class="wrapped">
     <header>
         <h1>SPOTILAM</h1>
-        <h2>Nombre de usuario</h2>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
     <nav>
