--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <header class="headerPerfil">
-        <h1 class="nombreUsuario">Nombre de usuario</h1>
-        <a class="imagenPerfil" href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50"
-                alt="imagen perfil"></a>
-        <a class="cerrarSesion" href="index.html">Cerrar sesion</a>
+    <header>
+    <h1></h1>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <main>
         <section class="formulario">
