--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-AR">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,25 @@
 
 <body>
     <main class="contenedor">
-        <form action="">
-            <label for="usuario">Usuario</label >
-            <input type="text" name="usuario" id="usuario" placeholder="Usuario">
-            <label for="contraseña">Contraseña</label>
-            <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
+        <form action =# action="post">
+            <input type="text" name="usuario" id="usuario" placeholder="Coloca tu Usuario">
+            <input type="password" name="contraseña" id="contraseña" placeholder="Aquí tu Contraseña">
             <a href="vistapantallaprincipa.html"><input class="boton" type="button" value="Iniciar Sesión"></a>
         </form>
+        <section class="registro">
+            <p>¿No tienes usuario? </p><a href="vistaregistro.html">Registrarse</a>
+        </section>
     </main>
-    <a href="vistaregistro.html">Registrarse</a>
     <!-- Footer -->
-     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
-
+     
+     <footer>
+        <section class="integrantes">
+            <article class="integrante">integrante: Ramiro Casanova 40638706</article>
+            <article class="integrante">integrante: Vazquez Espindola Mario 42471083</article>
+            <article class="integrante">integrante: Daniel Gomez 33157273</article>
+            <article class="integrante">integrante: Franco Ulzurrun 38998622</article>
+            <article class="integrante">integrante: Federico Ralowiec 33347115</article>
+            <article class="integrante">integrante: Mariano Saldivar 34767410</article>
+        </section>
+    </footer>
 </html>
