--- a/index.html
+++ b/index.html
@@ -21,15 +21,5 @@
         </section>
     </main>
     <!-- Footer -->
-     
-     <footer>
-        <section class="integrantes">
-            <article class="integrante">integrante: Ramiro Casanova 40638706</article>
-            <article class="integrante">integrante: Vazquez Espindola Mario 42471083</article>
-            <article class="integrante">integrante: Daniel Gomez 33157273</article>
-            <article class="integrante">integrante: Franco Ulzurrun 38998622</article>
-            <article class="integrante">integrante: Federico Ralowiec 33347115</article>
-            <article class="integrante">integrante: Mariano Saldivar 34767410</article>
-        </section>
-    </footer>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
 </html>
