--- a/planespremium.html
+++ b/planespremium.html
@@ -22,7 +22,7 @@
                 <article>
                     <h3>Plan mensual</h3>
                     <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
-                    <p>$1000/Mes</p>
+                    <p>$1000/Mes Sin descuentos</p>
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
                 <article>
@@ -39,8 +39,8 @@
                 </article>
             </form>
             <article class="botones">
-                <a href="vistapantallaprincipa.html"><button class="boton 1" type="submit">Cancelar</button></a>
-                <a href="vistapagar.html"><button class="boton 2" type="submit">Avanzar</button></a>
+                <a href="vistapantallaprincipa.html"><button class="boton1" type="submit">Cancelar</button></a>
+                <a href="vistapagar.html"><button class="boton2" type="submit">Avanzar</button></a>
             </article>
         </section>
     </main>
