--- a/planespremium.html
+++ b/planespremium.html
@@ -45,7 +45,7 @@
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no"></iframe>
 
 </body>
 
