--- a/vistapagar.html
+++ b/vistapagar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/payment.css">
-    <title>vistaPAGAR2</title>
+    <title>Abona tu membresía</title>
 </head>
 <body>
     <main>
@@ -29,7 +29,7 @@
             <br />
         </section>
         <section class="inputs">
-            <form action="thanks.html" method="post">
+            <form action="index.html" method="post">
                 <div class="container-grid2">
                     <div class="item-1">
                         <label for="nombre">Nombre y apellido</label>
@@ -67,6 +67,7 @@
             <br />
         </section>
     </main>
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no"></iframe>
+    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
