cambio en el footer para vista premium y botones en vista pagar arreglados

--- a/vistapagar.html
+++ b/vistapagar.html
@@ -29,7 +29,7 @@
             <br />
         </section>
         <section class="inputs">
-            <form action="index.html" method="post">
+            <form action="#" method="post">
                 <div class="container-grid2">
                     <div class="item-1">
                         <label for="nombre">Nombre y apellido</label>
@@ -57,10 +57,10 @@
                         <input type="text" placeholder="ej 123" name="cvc"></input>
                     </div>
                     <div class="item-9">
-                        <button type="submit">Pagar</button>
+                        <a href="vistapantallaprincipa.html"><input type="button" value="Pagar"></a>
                     </div>
                     <div class="item-10">
-                        <button type="submit">Cancelar</button>
+                        <a href="vistapantallaprincipa.html"><input type="button" value="Cancelar"></a>
                     </div>
                 </div>
             </form>
