--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>
 </html>
