cerrar sesion ya funcionando en musica sonando

--- a/vistamusicasonando.html
+++ b/vistamusicasonando.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Musica sonando</h1>
         <h2>Nombre de usuario</h2>
-        <a class="cerrarsesion" href="inicionsesion.html">Cerrar sesion</a> 
+        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
         <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
