vistaperfil renovada y lista en desktop

--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -14,7 +14,7 @@
             <h2>Nombre de usuario</h2>
             <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
         </span>
-        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <a class="imgperfil" href="vistaperfilnueva.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
     <nav>
