cambios en planes premium y detalles en perfil

--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/vistaperfil.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <title>Pantalla Principal</title>
+    <title>Perfil de usuario</title>
 </head>
 <body class="body">
     <header>
@@ -40,7 +40,7 @@
                     <input type="email" name="email" id="email" placeholder="e-mail">
                 </article>
             </form>
-            <a href="planespremium.html">Premium</a>
+            <a href="planespremiumnueva.html">Premium</a>
             <a href="index.html">Eliminar usuario</a>
         </section>
         <section class="botones">
