--- a/planespremium.html
+++ b/planespremium.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/planespremium.css">
+    <link rel="stylesheet" href="CSS/planespremiumnueva.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <title>Planes premium</title>
+    <title>Planes Premium</title>
 </head>
-
-<body>
+<body class="body">
     <header>
-        <h1>Nombre de usuario</h1>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <h1> </h1>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <main class="planes">
-        <h2>Planes Premium</h2>
+        <h2 class="premium">Planes Premium</h2>
         <section>
-            <form class="formulario" action="">
+            <form class="formulario" action="#" method="post">
                 <article>
                     <h3>Plan mensual</h3>
-                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <img src="https://picsum.photos/50/50" alt="plan 1">
                     <p>$1000/Mes Sin descuentos</p>
                     <input type="radio" name="opcion" value="Plan 1">
                 </article>
                 <article>
                     <h3>Plan Semestral</h3> 
-                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <img src="https://picsum.photos/50/50" alt="plan 2">
                     <p>$900/Mes 10% de descuento</p>
                     <input type="radio" name="opcion" value="Plan 2">
                 </article>
                 <article>
                     <h3>Plan Anual</h3>
-                    <img src="https://picsum.photos/50/50" alt="" class="imagenplan">
+                    <img src="https://picsum.photos/50/50" alt=" plan 3">
                     <p>$800/Mes 20% de descuento</p>
                     <input type="radio" name="opcion" value="Plan 3">
                 </article>
             </form>
             <article class="botones">
-                <a href="vistapantallaprincipa.html"><button class="boton1" type="submit">Cancelar</button></a>
                 <a href="vistapagar.html"><button class="boton2" type="submit">Avanzar</button></a>
+                <a href="vistapantallaprincipa.html"><button class="boton1" type="submit">Cancelar</button></a>
             </article>
         </section>
     </main>
-    <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no"></iframe>
 
+<!-- Footer -->
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
