detalle en nombre css en premium

--- a/planespremium.html
+++ b/planespremium.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/planespremiumnueva.css">
+    <link rel="stylesheet" href="CSS/planespremium.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Planes Premium</title>
 </head>
